--- a/plugin.xml
+++ b/plugin.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-           id="fr.pierrickrouxel.iCloudKV"
-      version="0.2.0">
+           id="com.portnou.cordova.plugin.iCloudKV"
+      version="0.3.0">
 
     <name>iCloudKV</name>
     <description>Cordova iCloud Key Value Plugin</description>
+    <author>Alexander S Portnoy</author>
     <license>Apache 2.0</license>
     <keywords>cordova,icloud,ios</keywords>
+    <repo>https://github.com/alexportnoy/phonegap-icloudkv-plugin</repo>
     
     <engines>
         <engine name="cordova" version=">=3.0.0" />
@@ -25,7 +27,7 @@
             </feature>
         </config-file>
         <header-file src="src/ios/iCloudKV.h" />
-        <source-file src="src/ios/iCloudKV.m" />          
+        <source-file src="src/ios/iCloudKV.m" />
     </platform>
 
 </plugin>
